--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
-        <title>schema.org microdata creator</title>
+        <title>Schema.org microdata creator</title>
     </head>
     <body class="bg-light">
         <div class="container">
-            <h1>schema.org microdata creator</h1>
+            <h1>Schema.org microdata creator</h1>
             <div class="alert alert-secondary alert-dismissible fade show" role="alert" id="welcome_box">
-                <strong>Hi there!</strong> This tool helps put together <a href="https://schema.org">schema.org</a> markup for your website.
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="document.querySelector('#welcome_box').style.display='none';">
+                <strong>Hi there!</strong> This tool helps put together <a href="https://schema.org">Schema.org</a> markup for your website.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="hide_welcome_box();">
                     <span aria-hidden="true">&times;</span>
                 </button>
               </div>
@@ -41,7 +41,7 @@
     
                 <h2>Properties</h2>
                 <div class="input-group mb-2 mr-sm-2">
-                    <select id="properties0" multiple class="form-select"></select>
+                    <select id="properties" multiple class="form-select"></select>
                     <button type="button" id="add_property_button" class="btn btn-primary" onclick="add_property_to_markup();">Add</button>
                 </div>
                 <h2>Markup</h2> 
@@ -54,7 +54,7 @@
         </div>
         <footer class="footer">
             <div class="container">
-            <span class="text-muted">Check out <a href="https://schema.org">schema.org</a>. Built by <a href="https://nicolaus.xyz">Nicolaus</a>.</span>
+            <span class="text-muted">Check out <a href="https://schema.org">Schema.org</a>. Built by <a href="https://nicolaus.xyz">Nicolaus</a>.</span>
             </div>
         </footer>    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
