added descriptions to types & properties

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 
                     <select id="types5" class="type_select form-select" multiple></select>
                 </div>
-    
+                <p class="text-muted">Description: <span id="type_description"></span></p>
                 <h2>Properties</h2>
                 <div class="input-group mb-2 mr-sm-2">
                     <select id="properties" multiple class="form-select"></select>
                     <button type="button" id="add_property_button" class="btn btn-primary" onclick="add_property_to_markup();">Add</button>
                 </div>
+                <p class="text-muted">Description: <span id="property_description"></span></p>
                 <h2>Markup</h2> 
                 <div class="input-group mb-2 mr-sm-2">
                     <textarea id="markup" class="form-control"></textarea>
