--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
                 <p class="text-muted">Description: <span id="type_description"></span></p>
                 <h2>Properties</h2>
+                <div class="form-check"><input type="checkbox" class="form-check-input" id="include_parent_types" checked="true" onclick="show_type_properties(selected_type);"><label class="form-check-label" for="include_parent_types">Include properties of parent types</label></div>
                 <div class="input-group mb-2 mr-sm-2">
                     <select id="properties" multiple class="form-select"></select>
                     <button type="button" id="add_property_button" class="btn btn-primary" onclick="add_property_to_markup();">Add</button>
