--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet">
-        <title>Schema.org microdata creator</title>
+        <title>Schema.org Microdata Creator</title>
     </head>
     <body class="bg-light">
         <div class="container">
-            <h1>Schema.org microdata creator</h1>
+            <h1>Schema.org Microdata Creator</h1>
             <div class="alert alert-secondary alert-dismissible fade show" role="alert" id="welcome_box">
                 <strong>Hi there!</strong> This tool helps put together <a href="https://schema.org">Schema.org</a> markup for your website.
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="hide_welcome_box();">
